employeelist button and message

--- a/src/css/EmployeeList.css
+++ b/src/css/EmployeeList.css
@@ -41,6 +41,11 @@
     margin-top: 10px;
 }
 
+.sidebar th button {
+    color: var(--red-wine);
+    font-weight: bolder;
+}
+
 .employee-list-shop-title {
     font-size: 1.4em;
 }
