--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -13,7 +13,7 @@ header {
 header #show-path{
     float: left;
     text-align: left;
-    display: inline-flex;
+    display: flex;
 }
 
 header #extra {
