--- a/src/css/StoreDatabase.css
+++ b/src/css/StoreDatabase.css
@@ -2,12 +2,13 @@
     --grey-hair: rgb(178, 178, 178);
 }
 
-.store-database {
-    position: absolute;
-    text-align: left;
-    display: block;
-    top: 3.15rem;
-    height: 90%;
+.store-database.false{
+    display: inline-block;
+}
+
+.store-database.true{
+    display: inline-block;
+    width: 75%;
 }
 
 .message-section {
