--- a/src/css/StoreDatabase.css
+++ b/src/css/StoreDatabase.css
@@ -2,12 +2,21 @@
     --grey-hair: rgb(178, 178, 178);
 }
 
+.store-database {
+    overflow-y: scroll;
+    height: 85vh
+}
+
 .store-database.false{
     display: inline-block;
+    justify-items: center;
+    text-align: center;
 }
 
 .store-database.true{
     display: inline-block;
+    justify-items: center;
+    text-align: center;
     width: 75%;
 }
 
