fix a bug in report list + add Total functionality

--- a/src/css/Report.css
+++ b/src/css/Report.css
@@ -1,6 +1,6 @@
 :root {
-    --grey: #E7E7E7;
-    --yellow-grey: #C3C3C3;
+  --grey: #e7e7e7;
+  --yellow-grey: #c3c3c3;
 }
 
 .react-calendar {
@@ -130,33 +130,33 @@
 }
 
 .report-showcase-section {
-    display: inline-block;
+  display: inline-block;
 }
 
-.report-title{
-    font-weight: bolder;
-    font-size: 2em;
+.report-title {
+  font-weight: bolder;
+  font-size: 2em;
 }
 
 #datepick-row th {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 #datepick-row input {
-    text-align: center;
+  text-align: center;
 }
 
 .export-report {
-    margin: 4em 3em 0em 3em;
-    background: var(--grey);
-    border: 1px solid var(--yellow-grey);
+  margin: 4em 3em 0em 3em;
+  background: var(--grey);
+  border: 1px solid var(--yellow-grey);
 }
 
 .date-range {
-    font-weight: bold;
+  font-weight: bold;
 }
 
-.date-range:hover{
+.date-range:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -165,15 +165,18 @@
   color: darkblue;
 }
 
-.report .table-section {
+.report.table-section {
   text-align: left;
 }
 
-.report .table-section .emp-name {
-    font-weight: bold;
+.report.table-section.emp-name {
+  font-weight: bold;
 }
 
-.report .table-section .time-stamp-cell span {
+.report.table-section.time-stamp-cell label {
   white-space: pre-wrap;
 }
 
+.report .table-section .date-cell {
+  text-align: center;
+}
