--- a/src/css/index.css
+++ b/src/css/index.css
@@ -340,7 +340,6 @@ body{
 	overflow: hidden;
 }
 
-::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+.inv::-webkit-scrollbar {
+	width: 0px;
 }
