--- a/src/css/Report.css
+++ b/src/css/Report.css
@@ -133,7 +133,7 @@
   display: inline-block;
 }
 
-.report-title {
+.title {
   font-weight: bolder;
   font-size: 2em;
 }
@@ -173,7 +173,16 @@
   text-align: left;
 }
 
+.report.table-section.table-row.false {
+  background-color: #d9b3b3;
+}
+
 .report.table-section.emp-name {
+  font-weight: bold;
+}
+
+.report.check-status.true{
+  color: red;
   font-weight: bold;
 }
 
