Finish Message + Button to add PinUser

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -343,3 +343,25 @@ body{
 .inv::-webkit-scrollbar {
 	width: 0px;
 }
+
+.cursor-pointer {
+	cursor: pointer;
+}
+
+.del {
+	text-decoration: line-through;
+}
+
+tr.strikeout td:before {
+	content: " ";
+	position: absolute;
+	top: 50%;
+	left: 0;
+	border-bottom: 1px solid #111;
+	width: 100%;
+  }
+  
+  tr.strikeout td:after {
+	content: "\00B7";
+	font-size: 1px;
+  }
