--- a/src/css/FunctionSelector.css
+++ b/src/css/FunctionSelector.css
@@ -1,25 +1,68 @@
 :root {
-    --black-shadow: rgb(0 0 0 / 20%);
-    --red-initial: rgb(249 36 36 / 80%);
-    --red-light: #F92424;
-    --red-wine: #BD1D1D;
+  --black-shadow: rgb(0 0 0 / 20%);
+  --red-initial: rgb(249 36 36 / 80%);
+  --red-light: #f92424;
+  --red-wine: #bd1d1d;
 }
 
 .function-selector {
-    padding: 2em 2em;
-    display:block;
-    text-align: center;
+  padding: 2em 2em;
+  display: block;
+  text-align: center;
 }
 
 .function-selector button {
-    margin: 1em 5em;
-    background-color: var(--red-light);
-    border-color: var(--red-wine);
-    width: 10em;
-    height: 5em;
+  margin: 1em 5em;
+  background-color: var(--red-light);
+  border-color: var(--red-wine);
+  width: 10em;
+  height: 5em;
 }
 
 .function-selector button:hover {
-    background-color: var(--red-wine);
+  background-color: var(--red-wine);
 }
 
+.todo-button {
+  text-decoration: none;
+  padding: 15px 26px;
+  position: relative;
+  display: inline-block;
+  border-radius: 2px;
+}
+
+.todo-button .badge {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 5px 10px;
+  border-radius: 70%;
+  background: rgb(72, 66, 183);
+  color: white;
+}
+
+.button-wrap {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+}
+
+@media only screen and (max-width: 900px) {
+  .button-wrap {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .button-wrap {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+
+  .message-date {
+    display: none
+  }
+}
