--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,367 +1,368 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 @media (min-width: 768px) {
   .modal-dialog {
-	width: 600px;
-	margin: 30px auto;
+    width: 600px;
+    margin: 30px auto;
   }
   .modal-content {
-	-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-			box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   }
   .modal-sm {
-	width: 500px;
-	height: 400px;
+    width: 500px;
+    height: 400px;
   }
 }
 
-#shrink
-{
-	float:right;
+#shrink {
+  float: right;
 }
 
 .dropdown {
-    position: relative;
-	display: inline;
+  position: relative;
+  display: inline;
 }
 
 .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #CACACA;
-	
-	overflow: auto;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-	border-radius: 6px;
-	min-width: 250px;
+  display: none;
+  position: absolute;
+  background-color: #cacaca;
+
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 6px;
+  min-width: 250px;
 }
 
 .dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
 
 .dropdown-content a:hover {
-	background-color: #ddd;
+  background-color: #ddd;
 }
 
-.dropdown a:hover {background-color: #f1f1f1}
+.dropdown a:hover {
+  background-color: #f1f1f1;
+}
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+  background-color: #3e8e41;
 }
 
 /*.show {display:relative;}*/
 
 .center {
-	margin-left:auto; 
-    margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
-	display:inline;
-	text-align: center;
-	font-size: 14px;
-	font-family: "Open Sans";
-	margin: 0px;
+  display: inline;
+  text-align: center;
+  font-size: 14px;
+  font-family: "Open Sans";
+  margin: 0px;
 }
 
 table {
-	table-layout: fixed;
-	margin-bottom: 30px;
-	border-radius: 10px;
-	border-collapse: separate;
-	border-spacing: 10px;
+  table-layout: fixed;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  border-collapse: separate;
+  border-spacing: 10px;
 }
 
 table#hour_date {
-	background: #E7E7E7;
-	border: 1px solid #C3C3C3;
+  background: #e7e7e7;
+  border: 1px solid #c3c3c3;
 }
 
-th, td {
-	align-items: center;
-	padding: 0.45em;
-	text-align: center;
-	border-bottom: 1px solid #ddd;
+th,
+td {
+  align-items: center;
+  padding: 0.45em;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
 }
 
 th {
-	border-bottom: 1px solid #C3C3C3;
+  border-bottom: 1px solid #c3c3c3;
 }
 
 h2 {
-	margin-top: 5px;
-	margin-bottom: 0px;
-	font-weight: bold;
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  font-weight: bold;
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .modal {
-	 padding-top: 100px;
+  padding-top: 100px;
 }
 
 .modal-header {
-	
-	background-color: #FC4848;
-	color: white;
+  background-color: #fc4848;
+  color: white;
 }
 
-a, table#delete_modal {
-	cursor: pointer;
+a,
+table#delete_modal {
+  cursor: pointer;
 }
 
-td#delete_modal_1, td#delete_modal_2 {
-	width: 1%;
+td#delete_modal_1,
+td#delete_modal_2 {
+  width: 1%;
 }
 
-td#delete_modal_1:hover, td#delete_modal_2:hover {
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+td#delete_modal_1:hover,
+td#delete_modal_2:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 button#dateReport {
-	width: 70px;
-	border-radius: 4px;
-	color: #FFFFFF;
-	background-color: #000000;
-	margin-bottom: 15px;
+  width: 70px;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: #000000;
+  margin-bottom: 15px;
 }
 
 table#datepicker {
-	border: none;
-	width: 35%;
+  border: none;
+  width: 35%;
 }
 
 table#datepicker td {
-	border:none;
+  border: none;
 }
 
 table#datepicker th {
-	border: none;
-	border-bottom: 1px solid #C3C3C3;
+  border: none;
+  border-bottom: 1px solid #c3c3c3;
 }
 
 .noBorder {
-	border: none;
+  border: none;
 }
 
-input#datepicker_start, #datepicker_end {
-    width: 70%;
-    padding: 10px;
-    margin: 0px;
-	text-align: center;
+input#datepicker_start,
+#datepicker_end {
+  width: 70%;
+  padding: 10px;
+  margin: 0px;
+  text-align: center;
 }
 
 table#person_list {
-	width: 30%;
-	margin-top: 5px;
-	cursor: pointer;
-	border: none;
+  width: 30%;
+  margin-top: 5px;
+  cursor: pointer;
+  border: none;
 }
 
 table#person_list th {
-	border: none;
-	border-bottom: 1px solid #C3C3C3;
-	background-color: white;
+  border: none;
+  border-bottom: 1px solid #c3c3c3;
+  background-color: white;
 }
 
 table#person_list td {
-	border-radius: 15px;
+  border-radius: 15px;
 }
 
 .radioButtons {
-	margin-top: 5px;
-	margin-bottom: 0px;
-	width: 12%;
-	background-color:white;
-	border: none;
-	
+  margin-top: 5px;
+  margin-bottom: 0px;
+  width: 12%;
+  background-color: white;
+  border: none;
 }
 
 table#radioButtons td {
-	border: none;
-	border-bottom: 1px solid #C3C3C3;
+  border: none;
+  border-bottom: 1px solid #c3c3c3;
 }
 
 .noBorder {
-	border:none;
+  border: none;
 }
 
 .collapseBorder {
-	border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 .smallTd {
-	width: 80px;
+  width: 80px;
 }
 
 .centerText {
-	text-align:center;
+  text-align: center;
 }
 
 .noBackground {
-	background-color:white;
+  background-color: white;
 }
 
 #addPersonTable {
-	background-color:white;
-	width: 100%;
+  background-color: white;
+  width: 100%;
 }
 
 table#place_option {
-	margin-top: 15px;
-	margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
-
 input#inputPIN {
-    border: 2px solid red;
-    border-radius: 4px;
+  border: 2px solid red;
+  border-radius: 4px;
 }
 
 .optionPage {
-	border: 1px solid red;
-	 display:inline-block;
-	 text-align: center;
-	 line-height: 65px;
-	vertical-align: middle;
-	height: 70px;
-	width: 140px;
-	background-color: #E7E7E7;
-	border-radius: 4px;
-	
+  border: 1px solid red;
+  display: inline-block;
+  text-align: center;
+  line-height: 65px;
+  vertical-align: middle;
+  height: 70px;
+  width: 140px;
+  background-color: #e7e7e7;
+  border-radius: 4px;
 }
 
-label#employeeLabel:hover, label#reportLabel:hover {
-	background-color: #BDBDBD;
+label#employeeLabel:hover,
+label#reportLabel:hover {
+  background-color: #bdbdbd;
 }
 
-.error
-{
- border:3px solid red;
+.error {
+  border: 3px solid red;
 }
 
 .redBorder {
-	border-color: red;
+  border-color: red;
 }
 
 .emp_table_width {
-	width: 80%;
+  width: 80%;
 }
 
 table#employee_table {
-	width: 80%;
-	background: none;
-	border: none;
+  width: 80%;
+  background: none;
+  border: none;
 }
 
 .inputLine {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: none;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
 }
 
 .empty-field {
-	border-bottom: 2px solid red;
+  border-bottom: 2px solid red;
 }
 
-
 table#radioButton {
-	width: 30%;
+  width: 30%;
 }
 
 .marginTop {
-	margin-top: 15px;
+  margin-top: 15px;
 }
 
 label.header {
-	border-radius: 3px;
-	padding-left: 5px;
+  border-radius: 3px;
+  padding-left: 5px;
 }
 
 label:hover.header {
-	background: white;
-	color: black;
+  background: white;
+  color: black;
 }
 
 .marginTopEmployee {
-	margin-top: 30px;
+  margin-top: 30px;
 }
 
 .width80 {
-	width: 80%;
+  width: 80%;
 }
 
 .tdPadding {
-	padding: 20px;
+  padding: 20px;
 }
 
-table thead th,td {
-	border-bottom: 1px solid #ddd;
+table thead th,
+td {
+  border-bottom: 1px solid #ddd;
 }
-
 
 .group_list {
-	border-radius: 5px;
-	width: 120px;
-	height: 25px;
+  border-radius: 5px;
+  width: 120px;
+  height: 25px;
 }
 
 .err_text {
-	font-size: 18px;
-	color:red;
+  font-size: 18px;
+  color: red;
 }
 
 .icon {
-	font-size: 16px;
+  font-size: 16px;
 }
 
 tbody {
-	width: 20em;
-	
+  width: 20em;
 }
 
-body{
-	overflow: hidden;
+body {
+  overflow: hidden;
 }
 
 .inv::-webkit-scrollbar {
-	width: 0px;
+  width: 0px;
 }
 
 .cursor-pointer {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .del {
-	text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 tr.strikeout td:before {
-	content: " ";
-	position: absolute;
-	top: 50%;
-	left: 0;
-	border-bottom: 1px solid #111;
-	width: 100%;
-  }
-  
-  tr.strikeout td:after {
-	content: "\00B7";
-	font-size: 1px;
-  }
+  content: " ";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  border-bottom: 1px solid #111;
+  width: 100%;
+}
+
+tr.strikeout td:after {
+  content: "\00B7";
+  font-size: 1px;
+}
+
+
