--- a/src/css/FunctionSelector.css
+++ b/src/css/FunctionSelector.css
@@ -55,14 +55,16 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .button-wrap {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     place-items: center;
   }
-
-  .message-date {
-    display: none
+  .report-button {
+    display: none;
+  }
+  .workday-button {
+    display: none;
   }
 }
