--- a/src/css/StoreDatabase.css
+++ b/src/css/StoreDatabase.css
@@ -53,7 +53,7 @@
     text-align: -webkit-center;
 }
 .alert-header {
-    text-align: left;
+    text-align: center;
 
 }
 
@@ -69,5 +69,14 @@
   }
   .message-section {
     padding: 0;
+  }
+  .store-database.false {
+    display: block;
+    position: fixed;
+    top: 3.15rem;
+    left: 0;
+    width: 100%;
+    height: 82%;
+    overflow-y: scroll;
   }
 }
