--- a/src/css/Report.css
+++ b/src/css/Report.css
@@ -3,139 +3,12 @@
   --yellow-grey: #c3c3c3;
 }
 
-.react-calendar {
-  border-radius: 4px;
-  width: 350px;
-  max-width: 100%;
-  background: white;
-  font: inherit;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 1.125em;
-  border: 0;
-  overflow: hidden;
-}
-.react-calendar button {
-  margin: 0;
-  border: 0;
-  outline: none;
-  font: inherit;
-  font-size: 0.8em;
-}
-.react-calendar button:enabled:hover {
-  cursor: pointer;
-}
-.react-calendar--doubleView {
-  width: 700px;
-}
-.react-calendar--doubleView .react-calendar__viewContainer {
-  display: flex;
-  margin: -0.5em;
-}
-.react-calendar--doubleView .react-calendar__viewContainer > * {
-  width: 50%;
-  margin: 0.5em;
-}
-.react-calendar,
-.react-calendar *,
-.react-calendar *:before,
-.react-calendar *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.react-calendar__navigation {
-  display: flex;
-  height: 44px;
-  margin-bottom: 10px;
-}
-.react-calendar__navigation button {
-  min-width: 44px;
-  background: none;
-  font-size: 1.5em;
-}
-.react-calendar__navigation button:enabled:hover,
-.react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
-}
-.react-calendar__navigation button[disabled] {
-  background-color: #f0f0f0;
-}
-.react-calendar__month-view__weekdays {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 0.75em;
-}
-.react-calendar__month-view__weekdays__weekday {
-  padding: 0.5em;
-}
-.react-calendar__month-view__weekNumbers {
-  font-weight: bold;
-}
-.react-calendar__month-view__weekNumbers .react-calendar__tile {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.75em;
-  padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
-}
-.react-calendar__month-view__days__day--weekend {
-  color: #d10000;
-}
-.react-calendar__month-view__days__day--neighboringMonth {
-  color: #757575;
-}
-.react-calendar__year-view .react-calendar__tile,
-.react-calendar__decade-view .react-calendar__tile,
-.react-calendar__century-view .react-calendar__tile {
-  padding: 2em 0.5em;
-}
-.react-calendar__tile {
-  max-width: 100%;
-  text-align: center;
-  padding: 0.75em 0.5em;
-  background: none;
-}
-.react-calendar__tile:disabled {
-  background-color: #f0f0f0;
-}
-.react-calendar__tile:enabled:hover,
-.react-calendar__tile:enabled:focus {
-  background-color: #e6e6e6;
-}
-.react-calendar__tile--hasActive {
-  background: #76baff;
-}
-.react-calendar__tile--hasActive:enabled:hover,
-.react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
-}
-.react-calendar__tile--active {
-  background: #006edc;
-  color: white;
-}
-.react-calendar__tile--active:enabled:hover,
-.react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
-}
-.react-calendar--selectRange .react-calendar__tile--hover {
-  background-color: #e6e6e6;
-}
-.react-calendar.hide {
-  display: none;
-}
-
 .report {
   text-align: center;
 }
 
 .report-showcase-section {
   display: inline-block;
-}
-
-.title {
-  font-weight: bolder;
-  font-size: 2em;
 }
 
 #datepick-row th {
@@ -251,4 +124,16 @@
 
 .add-record.table input {
   text-align: center;
+}
+
+@media only screen and (max-width: 450px) {
+  .report.table-section.compare-part {
+    display: none;
+  }
+  .report.table-section.schedule-part {
+    display: none;
+  }
+  .export-report {
+    margin: 0px;
+  }
 }
